--- a/Exhibiz/Exhibiz HTML/index-event-video-background-dark.html
+++ b/Exhibiz/Exhibiz HTML/index-event-video-background-dark.html
@@ -755,6 +755,9 @@
 
                         <div class="col-md-12 text-center">
                             <img src="images-event/logo/1.png" alt="" class="grey-hover">
+                            <img src="images-event/logo/1b.png" alt="" class="grey-hover">
+                            <img src="images-event/logo/1c.png" alt="" class="grey-hover">
+
                             <div class="spacer-single"></div>
                             <img src="images-event/logo/2b.png" alt="" class="grey-hover">
                             <img src="images-event/logo/3b.png" alt="" class="grey-hover">
