--- a/Exhibiz/Exhibiz HTML/index.html
+++ b/Exhibiz/Exhibiz HTML/index.html
@@ -190,7 +190,7 @@
 
                         <div class="col-lg-4 wow fadeIn" data-wow-delay="0s">
                             <div class="box-number square">
-                               <i class="bg-color hover-color-2 fa fa-microphone text-light"></i>
+                               <i class="bg-color hover-color-2 fa fa-check text-light"></i>
                                 <div class="text">
                                     <h3><span>Виртуал хот</span></h3>
                                     <p>Хархорум хотын 800 жилийн ойд зориулан анхлан туурвисан Виртуал Хархорум хотыг түмэн олонд танилцуулах онлайн арга хэмжээнд оролцох.</p>
@@ -200,7 +200,7 @@
 
                         <div class="col-lg-4 wow fadeIn" data-wow-delay=".25s">
                             <div class="box-number square">
-                                <i class="bg-color hover-color-2 fa fa-lightbulb-o text-light"></i>
+                                <i class="bg-color hover-color-2 fa fa-check text-light"></i>
                                 <div class="text">
                                     <h3><span>Цаг хугацааны аялал</span></h3>
                                     <p>Эртний 13-р зуун луу цаг хугацаагаар аялж хүчирхэг дээдсийн цогцлоон бүтээсэн Хархорум хотыг нүдээр үзэх.</p>
@@ -210,7 +210,7 @@
 
                         <div class="col-lg-4 wow fadeIn" data-wow-delay=".5s">
                             <div class="box-number square">
-                                <i class="bg-color hover-color-2 fa fa-sitemap text-light"></i>
+                                <i class="bg-color hover-color-2 fa fa-check text-light"></i>
                                 <div class="text">
                                     <h3><span>Монгол оюун</span></h3>
                                     <p>Монгол түүхчдын судалгаанд үндэслэсэн Хархорум хотын хамгийн бодит өнгө төрхийг орчин үеийн виртуал технологийн шийдлээр бүтээв.</p>
@@ -222,7 +222,7 @@
 
                         <div class="col-lg-4 wow fadeIn" data-wow-delay=".75s">
                             <div class="box-number square">
-                                <i class="bg-color hover-color-2 fa fa-building text-light"></i>
+                                <i class="bg-color hover-color-2 fa fa-check text-light"></i>
                                 <div class="text">
                                     <h3><span>Өв соёл</span></h3>
                                     <p>Дэлхийд дуурсагдах түүх соёлын үнэт өвийн анхны гэрч болох.</p>
@@ -232,7 +232,7 @@
 
                         <div class="col-lg-4 wow fadeIn" data-wow-delay="1s">
                             <div class="box-number square">
-                                <i class="bg-color hover-color-2  fa fa-users text-light"></i>
+                                <i class="bg-color hover-color-2  fa fa-check text-light"></i>
                                 <div class="text">
                                     <h3><span>Түүхийн ач холбогдол</span></h3>
                                     <p>Түүх бол бидний өнгөрснийг өгүүлж ирээдүйг цогцлоож байдаг.</p>
@@ -242,7 +242,7 @@
 
                         <div class="col-lg-4 wow fadeIn" data-wow-delay="1.25s">
                             <div class="box-number square">
-                                <i class="bg-color hover-color-2 fa fa-mortar-board text-light"></i>
+                                <i class="bg-color hover-color-2 fa fa-check text-light"></i>
                                 <div class="text">
                                     <h3><span>Үндэсний дархлаа</span></h3>
                                     <p>Үндэсний өв, түүх соёлыг түгээн дэлгэрүүлэх, үр хойчдоо үлдээх.</p>
@@ -282,7 +282,7 @@
                                    <p>Доктор, Проф, Төслийг санаачлагч</p>
                  
                                    <div class="social">
-                                      <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
+                                      <a href="https://www.facebook.com/enkhbayar.altantsetseg.5/"><i class="fa fa-facebook fa-lg"></i></a>
                                    </div>
                                 </div>
                             </div>
@@ -301,7 +301,7 @@
                                     <p>Доктор, Проф, Түүхч, Археологич</p>
 
                                     <div class="social">
-                                        <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
+                                        <a href="https://www.facebook.com/ulambayar.erdenebat.71/"><i class="fa fa-facebook fa-lg"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -320,7 +320,7 @@
                                     <p>Rio Tinto Mongolia,Үйл ажиллагаа хариуцсан дэд захирал</p>
 
                                     <div class="social">
-                                        <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
+                                        <a href="https://www.facebook.com/amar.jargal.50/"><i class="fa fa-facebook fa-lg"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -339,7 +339,7 @@
                                     <p>Зураач</p>
 
                                     <div class="social">
-                                        <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
+                                        <a href="https://www.facebook.com/ganzorig.dangaa.9/"><i class="fa fa-facebook fa-lg"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -357,7 +357,7 @@
                                     <p>МУСГЗ, Түүхч, Уран сайхны зөвлөх</p>
 
                                     <div class="social">
-                                        <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
+                                        <a href="https://www.facebook.com/profile.php?id=100015688568435"><i class="fa fa-facebook fa-lg"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -375,7 +375,7 @@
                                     <p>3D Artist</p>
 
                                     <div class="social">
-                                        <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
+                                        <a href="https://www.facebook.com/dobayarart/"><i class="fa fa-facebook fa-lg"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -394,7 +394,7 @@
                                     <p>Ерөнхий зөвлөх</p>
 
                                     <div class="social">
-                                        <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
+                                        <a href="https://www.facebook.com/profile.php?id=100009813632196"><i class="fa fa-facebook fa-lg"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -404,19 +404,15 @@
 							<!-- team member -->
                             <div class="de-team-list">
                                 <div class="team-pic">
-                                    <img src="images-event/team/C.jpg" class="img-responsive" alt="" />
+                                    <img src="images-event/team/35.png" class="img-responsive" alt="" />
                                 </div>
                                 <div class="team-desc">
-                                    <h3>Ганзориг</h3>
-                                    <p class="lead">Зураач</p>
+                                    <h3>З. Оюундэлгэр</h3>
                                     <div class="small-border"></div>
-                                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                    <p>Монгол Улсын Зөвлөх архитектор /PhD/</p>
 
                                     <div class="social">
-                                        <a href="#"><i class="fa fa-facebook fa-lg"></i></a>
-                                        <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
-                                        <a href="#"><i class="fa fa-google-plus fa-lg"></i></a>
-                                        <a href="#"><i class="fa fa-skype fa-lg"></i></a>
+                                        <a href="https://www.facebook.com/oyunbileg.zundui.7/"><i class="fa fa-facebook fa-lg"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -607,11 +603,11 @@
                                                     <div class="schedule-item">
                                                         <!-- <div class="sc-time">12:00 - 14:00 PM</div> -->
                                                         <div class="sc-pic">
-                                                            <img src="images-event/team/2.jpg" class="img-circle" alt="">
+                                                            <img src="images-event/team/9.jpg" class="img-circle" alt="">
                                                         </div>
                                                         <div class="sc-name">
-                                                            <h4>Г.Онон</h4>
-                                                            <span>Developer</span>
+                                                            <h4>Золчимэг</h4>
+                                                            <span>3D Artist</span>
                                                         </div>
                                                         <div class="clearfix"></div>
                                                     </div>
@@ -658,7 +654,7 @@
                                                     <div class="schedule-item">
                                                         <!-- <div class="sc-time">12:00 - 14:00 PM</div> -->
                                                         <div class="sc-pic">
-                                                            <img src="images-event/team/6.jpg" class="img-circle" alt="">
+                                                            <img src="images-event/team/35.jpg" class="img-circle" alt="">
                                                         </div>
                                                         <div class="sc-name">
                                                             <h4>З.Оюунбилэг</h4>
@@ -672,7 +668,7 @@
                                                     <div class="schedule-item">
                                                         <!-- <div class="sc-time">12:00 - 14:00 PM</div> -->
                                                         <div class="sc-pic">
-                                                            <img src="images-event/team/6.jpg" class="img-circle" alt="">
+                                                            <img src="images-event/team/38.jpg" class="img-circle" alt="">
                                                         </div>
                                                         <div class="sc-name">
                                                             <h4>Б. Мөнхцэцэг</h4>
@@ -686,7 +682,7 @@
                                                     <div class="schedule-item">
                                                         <!-- <div class="sc-time">12:00 - 14:00 PM</div> -->
                                                         <div class="sc-pic">
-                                                            <img src="images-event/team/6.jpg" class="img-circle" alt="">
+                                                            <img src="images-event/team/36.jpg" class="img-circle" alt="">
                                                         </div>
                                                         <div class="sc-name">
                                                             <h4>С. Батжаргал</h4>
@@ -699,7 +695,7 @@
                                                     <div class="schedule-item">
                                                         <!-- <div class="sc-time">12:00 - 14:00 PM</div> -->
                                                         <div class="sc-pic">
-                                                            <img src="images-event/team/6.jpg" class="img-circle" alt="">
+                                                            <img src="images-event/team/37.jpg" class="img-circle" alt="">
                                                         </div>
                                                         <div class="sc-name">
                                                             <h4>Ц. Батсайхан</h4>
@@ -735,7 +731,7 @@
                                                     <div class="schedule-item">
                                                         <!-- <div class="sc-time">12:00 - 14:00 PM</div> -->
                                                         <div class="sc-pic">
-                                                            <img src="images-event/team/20.jpg" class="img-circle" alt="">
+                                                            <img src="images-event/team/39.jpg" class="img-circle" alt="">
                                                         </div>
                                                         <div class="sc-name">
                                                             <h4>Л. Одхүү</h4>
@@ -749,7 +745,7 @@
                                                     <div class="schedule-item">
                                                         <!-- <div class="sc-time">12:00 - 14:00 PM</div> -->
                                                         <div class="sc-pic">
-                                                            <img src="images-event/team/8.jpg" class="img-circle" alt="">
+                                                            <img src="images-event/team/3.jpg" class="img-circle" alt="">
                                                         </div>
                                                         <div class="sc-name">
                                                             <h4>Л.Одбаяр</h4>
@@ -884,7 +880,7 @@
                 <div class="pf_full_width wow fadeInUp" data-wow-delay=".3s">
 
                     <!-- gallery item -->
-                    <div class="item residential">
+                    <div class="item">
                         <div class="picframe">
                             <a href="https://ds.ocurus.com/" title="VR Quest">
                                 <span class="overlay">
@@ -899,11 +895,13 @@
                     <!-- close gallery item -->
 
                     <!-- gallery item -->
-                    <div class="item hospitaly">
-                        <div class="picframe">
+                    <div class="item-1">
+                        <div class="picframe-1">
                                 <span class="overlay-1">
                                     <span class="pf_text">
+                                        <div class="cd-container">
                                         <div id="defaultCountdown" class="countdown-s1"></div>
+                                        </div>
                                     </span>
                                 </span>
                         </div>
@@ -911,12 +909,12 @@
                     <!-- close gallery item -->
 
                     <!-- gallery item -->
-                    <div class="item hospitaly">
+                    <div class="item">
                         <div class="picframe">
-                            <a href="images-event/portfolio/3.jpg" title="Event Photo">
+                            <a>
                                 <span class="overlay">
                                     <span class="pf_text">
-                                        <span class="project-name">View Image</span>
+                                        <span class="project-name">Тун удахгүй</span>
                                     </span>
                                 </span>
                                 <img src="images-event/portfolio/3.jpg" alt="" />
@@ -975,50 +973,7 @@
                 </div>
 
             </section>
-            <!-- section close -->
-			
-			<!-- section begin -->
-            <!-- logo carousel section close -->
-			
-			<!-- <section id="section-fun-facts" class="text-light" data-bgimage="url(images-event/bg/3.jpg) fixed top">
-                    <div class="container">
-						<div class="row">
-                            <div class="col-md-3 col-xs-6">
-                                <div class="de_count" >
-                                    <i class="icon_id-2 id-color-2"></i>
-                                    <h3>8800</h3>
-                                    <span class="text-white">Participants</span>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3 col-xs-6">
-                                <div class="de_count">
-                                    <i class="icon_easel id-color-2"></i>
-                                    <h3>300</h3>
-                                    <span class="text-white">Topics</span>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3 col-xs-6">
-                                <div class="de_count">
-                                    <i class="icon_headphones id-color-2"></i>
-                                    <h3>50</h3>
-                                    <span class="text-white">Speakers</span>
-                                </div>
-                            </div>
-
-                            <div class="col-md-3 col-xs-6">
-                                <div class="de_count">
-                                    <i class="icon_globe id-color-2"></i>
-                                    <h3>20</h3>
-                                    <span class="text-white">Awards</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section> -->
-
-
+            
             <!-- footer begin -->
         <footer class="style-2">
             <div class="container">
