--- a/Tuuhsoyol/mn.html
+++ b/Tuuhsoyol/mn.html
@@ -75,7 +75,7 @@
                     <div class="col-md-12">
                         <!-- logo begin -->
                         <div id="logo">
-                            <a href="http://tuuhsoyol.com/mn">
+                            <a href="http://tuuhsoyol.com/">
                                 <img class="logo" src="images-event/logo.png" alt="">
                             </a>
                         </div>
