english version edit

--- a/Tuuhsoyol/index.html
+++ b/Tuuhsoyol/index.html
@@ -131,7 +131,7 @@
 								<div class="spacer-single"></div>
 								<div class="spacer-single"></div>
 								
-                                <a href="https://www.facebook.com/events/753940628577504/" class="btn-custom text-white scroll-to">360 виртуал аялал хийх</a><br>
+                                <a href="https://ds.ocurus.com/view/NDQ3MA==" class="btn-custom text-white scroll-to">360 виртуал аялал хийх</a><br>
                                 <!-- <div id="defaultCountdown" class="countdown-s1"></div> -->
 							</div>
 						</div>
@@ -952,7 +952,7 @@
                     <!-- gallery item -->
                     <div class="item">
                         <div class="picframe">
-                            <a href="">
+                            <a href="https://ds.ocurus.com/view/NDQ3MA==">
                                 <span class="overlay">
                                     <span class="pf_text">
                                         <span class="project-name">XIII зууны Монголын эзэнт гүрний нийслэл Хархорум хотын виртуал аялал</span>
