--- a/Tuuhsoyol/EN/index.html
+++ b/Tuuhsoyol/EN/index.html
@@ -129,10 +129,9 @@
 								</h1>
 								
 								<div class="spacer-single"></div>
-								<h3>2020-12-29 19:00 &nbsp;&nbsp;&nbsp;&nbsp; </h3>
 								<div class="spacer-single"></div>
 								
-                                <a href="https://www.facebook.com/events/753940628577504/" class="btn-custom text-white scroll-to">Enter Virtual Tour</a><br>
+                                <a href="https://ds.ocurus.com/view/NDQ3MA==" class="btn-custom text-white scroll-to">Enter Virtual Tour</a><br>
                                 <!-- <div id="defaultCountdown" class="countdown-s1"></div> -->
 							</div>
 						</div>
@@ -950,7 +949,7 @@
                     <!-- gallery item -->
                     <div class="item">
                         <div class="picframe">
-                            <a href="">
+                            <a href="https://ds.ocurus.com/view/NDQ3MA==">
                                 <span class="overlay">
                                     <span class="pf_text">
                                         <span class="project-name">Virtual tour of Kharakhorum, the capital city of the 13th century Mongol Empire</span>
